# tinydiffeq

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: README.md  __init__.py  compile_times.py  jvp_strategies.py  test_aux_dense_output.py  test_pytree_overhead.py
benchmarks/results/: 2026-07-20_nlls-2.3.0_pre-proposed-changes.json  2026-07-20_nlls-2.3.0_pre-proposed-changes.md  2026-07-20_nlls-2.4.0_explicit-direct-auto-final.json  2026-07-20_nlls-2.4.0_explicit-direct-auto-final.md  2026-07-20_nlls-2.4.0_explicit-direct-auto-tree-vjp-repeat1.json  2026-07-20_nlls-2.4.0_explicit-direct-auto-tree-vjp-repeat2.json  2026-07-20_nlls-2.4.0_post-proposed-changes.json  2026-07-21_failed-ad-integration-baseline.json  2026-07-21_failed-ad-integration-comparison.md  2026-07-21_failed-ad-integration-compile-baseline.csv  2026-07-21_failed-ad-integration-compile-post.csv  2026-07-21_failed-ad-integration-jvp-strategies-baseline.csv  2026-07-21_failed-ad-integration-jvp-strategies-post.csv  2026-07-21_failed-ad-integration-post.json  2026-07-21_failed-ad-integration-stable-baseline.csv  2026-07-21_failed-ad-integration-stable-post.csv  2026-07-21_failed-ad-integration-stable-raw-crossings.csv  2026-07-21_nlls-2.4.0-release-stable.csv  2026-07-21_nlls-2.4.0-release-tree-jvp-repeat.csv  2026-07-21_nlls-2.4.0-release.json
docs/: adaptive_ad.md  api.md  aux.md  dae.md  exponential.md  index.md  llms.txt  markov_chains.md  migration.md  rodas5p.md  sdae.md  sde.md  static_shapes.md
performance_comparison/: .gitignore  CURRENT_RESULTS.md  LINEAR_CTMC_RESULTS.md  MARKOV_RESULTS.md  OPTIMIZATION_RESULTS.md  README.md  render_markov_report.py  render_report.py  run.sh  run_linear_ctmc.sh  run_markov.sh
performance_comparison/julia/: Manifest.toml  Project.toml  benchmark.jl  benchmark_gpu.jl  benchmark_linear_ctmc.jl  benchmark_markov.jl  instantiate.jl  setup_env.jl
performance_comparison/python/: benchmark.py  benchmark_linear_ctmc.py  benchmark_markov.py  benchmark_markov_distribution.py  pyproject.toml  validate.py
performance_comparison/results/: julia_cpu.json  julia_cpu_dae.json  julia_cpu_markov.json  julia_cpu_rodas.json  julia_cpu_sdae.json  julia_cpu_sde_large.json  julia_cpu_vjp.json  julia_gpu.json  python_cpu.json  python_cpu_dae.json  python_cpu_markov.json  python_cpu_markov_distribution.json  python_cpu_rodas.json  python_cpu_sde_large.json  python_gpu.json  python_gpu_dae.json  python_gpu_markov.json  python_gpu_markov_distribution.json  python_gpu_rodas.json  python_gpu_sde_large.json  validation_cpu.json  validation_gpu.json
src/tinydiffeq/: __init__.py  _aux.py  _rodas5p.py  _tree.py  controllers.py  dae.py  exponential.py  interpolation.py  markov.py  ode.py  quadrature.py  save_at.py  saveat.py  sdae.py  sde.py  solution.py  solvers.py
tests/: kernels_reference.py  test_ad.py  test_adaptive.py  test_aux.py  test_dae.py  test_exponential.py  test_field_aux.py  test_float64_subprocess.py  test_gpu.py  test_markov.py  test_markov_distribution.py  test_pytree_states.py  test_quadrature.py  test_recompile.py  test_rodas5p.py  test_save_at.py  test_saveat.py  test_sdae.py  test_sde.py  test_solvers_fixed.py
