[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinydiffeq"
version = "0.1.0"
description = "Tiny differentiable ODE/SDE solvers for JAX — bounded-scan adaptive stepping, static shapes, jvp/vjp-safe"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Jesse Perla", email = "jesseperla@gmail.com" }]
keywords = [
    "ode",
    "sde",
    "differential-equations",
    "runge-kutta",
    "jax",
    "autodiff",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/HighDimensionalEconLab/tinydiffeq"
Repository = "https://github.com/HighDimensionalEconLab/tinydiffeq"
Documentation = "https://highdimensionaleconlab.github.io/tinydiffeq/"
Issues = "https://github.com/HighDimensionalEconLab/tinydiffeq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tinydiffeq"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
benchmark = [
    "pytest-benchmark>=5.2.3",
]
dev = [
    "pytest>=8",
    "ruff>=0.15.17",
    "scipy>=1.13",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
gpu = [
    "jax[cuda13]>=0.7.0 ; sys_platform == 'linux'",
]
